--- a/mypos/src/app/components/authen/login/login.component.html
+++ b/mypos/src/app/components/authen/login/login.component.html
@@ -50,7 +50,7 @@
             <a href="forgot-password.html">I forgot my password</a>
           </p>
           <p class="mb-0">
-            <a href="register.html" class="text-center">Register a new membership</a>
+            <a [routerLink]="['/register']" class="text-center">Register a new membership</a>
           </p>
         </div>
       </div>
