--- a/mypos/src/app/components/stock/stock-home/stock-home.component.html
+++ b/mypos/src/app/components/stock/stock-home/stock-home.component.html
@@ -1,1 +1,75 @@
-<p>stock-home works!</p>
+<div class="content-wrapper">
+  <section class="content-header">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-4 col-xs-12">
+          <div class="info-box">
+            <span class="info-box-icon bg-info"><i class="fas fa-box-open"></i></span>
+            <div class="info-box-content">
+              <span class="info-box-text">Stock</span>
+              <span class="info-box-number">XXXXX</span>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 col-xs-12">
+          <div class="info-box">
+            <span class="info-box-icon bg-warning"><i class="fas fa-exclamation-triangle"></i></span>
+            <div class="info-box-content">
+              <span class="info-box-text">Defect</span>
+              <span class="info-box-number">0</span>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 col-xs-12">
+          <div class="info-box">
+            <span class="info-box-icon bg-maroon"><i class="fas fa-minus-circle"></i></span>
+            <div class="info-box-content">
+              <span class="info-box-text">Sold out</span>
+              <span class="info-box-number">XXXX</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="content">
+    <div class="card">
+      <div class="card-body">
+           <div class="row card-body-header">
+                <div class="col-5">
+                    <input class="form-control input-lg" placeholder="Enter search keyword">
+                  </div>
+                  <div class="col-7">
+                    <a class="btn btn-success float-right btn-add">เพิ่ม</a>
+                  </div>
+            </div>
+        <table class="table table-bordered table-striped table-hover">
+          <thead>
+            <tr>
+              <th class="text-center">ID</th>
+              <th>NAME</th>
+              <th>PRICE</th>
+              <th>STOCK</th>
+              <th class="text-center">ACTION</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td class="text-center">XXXX</td>
+              <td>
+                <img src="assets/images/no_photo.jpg" class="product_image">
+                <strong class="product_name">XXXX</strong>
+              </td>
+              <td>฿XXXXXX</td>
+              <td>XXXXX PCS.</td>
+              <td class="text-center">
+                <img src="assets/images/ic_edit.png" class="edit_product">
+                <img src="assets/images/ic_delete.png" class="delete_product">
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </section>
+</div>
