--- a/mypos/src/app/app.component.html
+++ b/mypos/src/app/app.component.html
@@ -1,5 +1,5 @@
 
-<ng-container *ngIf="true; then shop; else login">ignore content</ng-container>
+<ng-container *ngIf="authService.isLogin(); then shop; else login">ignore content</ng-container>
 <ng-template #login>
   <app-login></app-login>
 </ng-template>
