--- a/mypos/src/app/components/stock/stock-home/stock-home.component.html
+++ b/mypos/src/app/components/stock/stock-home/stock-home.component.html
@@ -35,14 +35,15 @@
   <section class="content">
     <div class="card">
       <div class="card-body">
-           <div class="row card-body-header">
-                <div class="col-5">
-                    <input (keyup)="searchTextChanged.next($event.target.value)" class="form-control input-lg" placeholder="Enter search keyword">
-                  </div>
-                  <div class="col-7">
-                    <a [routerLink]="['/stock/create']" class="btn btn-success float-right btn-add">เพิ่ม</a>
-                  </div>
-            </div>
+        <div class="row card-body-header">
+          <div class="col-5">
+            <input (keyup)="searchTextChanged.next($event.target.value)" class="form-control input-lg"
+              placeholder="Enter search keyword">
+          </div>
+          <div class="col-7">
+            <a [routerLink]="['/stock/create']" class="btn btn-success float-right btn-add">เพิ่ม</a>
+          </div>
+        </div>
         <table class="table table-bordered table-striped table-hover">
           <thead>
             <tr>
@@ -57,15 +58,15 @@
             <tr *ngFor="let item of mProductArray">
               <td class="text-center">{{ item.productId }}</td>
               <td>
-                <img *ngIf="item.image == ''" src="assets/images/no_photo.jpg" class="product_image">
-                <img *ngIf="item.image != ''" src="{{item.image}}" class="product_image">
+                <img *ngIf="item.image === null" src="assets/images/no_photo.jpg" class="product_image">
+                <img *ngIf="item.image !== null" src="{{item.image}}" class="product_image">
                 <strong class="product_name"> {{ item.name }}</strong>
               </td>
               <td>฿ {{ item.price }}</td>
               <td>{{ item.stock }} PCS.</td>
               <td class="text-center">
-                <img src="assets/images/ic_edit.png" (click)="editProduct(191)" class="edit_product">
-                <img src="assets/images/ic_delete.png" (click)="deleteProduct(191)" class="delete_product">
+                <img src="assets/images/ic_edit.png" (click)="editProduct(item.productId)" class="edit_product">
+                <img src="assets/images/ic_delete.png" (click)="deleteProduct(item.productId)" class="delete_product">
               </td>
             </tr>
           </tbody>
