--- a/mypos/src/app/components/shared/menu/menu.component.html
+++ b/mypos/src/app/components/shared/menu/menu.component.html
@@ -12,7 +12,7 @@
         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
           <li class="nav-header">MAIN NAVIGATION</li>
           <li class="nav-item">
-            <a class="nav-link">
+            <a class="nav-link" [routerLink]="['/stock']" routerLinkActive="active" >
               <i class="nav-icon fas fa-database"></i>
               <p>
                 สต๊อก
@@ -21,7 +21,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link">
+            <a class="nav-link" [routerLink]="['/shop']" routerLinkActive="active" >
               <i class="nav-icon fas fa-shopping-basket"></i>
               <p>
                 หน้าร้าน
@@ -50,4 +50,4 @@
         </ul>
       </nav>
     </div>
-  </aside> 
+  </aside>
